syntax = "proto3";
package pocket.tokenomics;

import "gogoproto/gogo.proto";
import "pocket/tokenomics/params.proto";

option go_package = "github.com/pokt-network/poktroll/x/tokenomics/types";

// GenesisState defines the tokenomics module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
}
